tests/fail/fail_molda_unknown_type.kr
fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "jose", idadi: 60};
    mostra(pessoa.nomi);
}
